--- a/es/index.html
+++ b/es/index.html
@@ -76,108 +76,78 @@
         </div>
     </div>
     <div class ="need">
-    <p>Para una repisa de 60x20x18mm...</p>
-    <h2>Necesitamos:</h2>
+    <p class="title">Para una repisa de 60x20x18mm...</p>
+    <h2 class="title">Necesitamos:</h2>
     <div class="checkboxes">
         <div class="needles">
             <h2>Herramientas</h2>
             <div class="list">
-            <div class="checkitem">
                 <label class="item">
-                    <input type="checkbox" name="pencil"/>
+                    <input type="checkbox" name="pencil">
                     Lápiz
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="meter"/>
                     Cinta métrica
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="screwdriver"/>
                     Destornillador phillips
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="drill"/>
                     Taladro
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="level"/>
                     Nivel de mano
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="hammer"/>
                     Martillo
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="square"/>
                     Escuadra de precisión
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="saw"/>
                     Sierra circular o de mano (si es necesario cortar la madera)
                 </label>
-            </div>
             <h4>Recomiendo:</h4>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="glasses"/>
                     Gafas de protección
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="auditive"/>
                     Protector auditivo
                 </label>
             </div>
-            </div>
         </div>
         <div class="needles">
             <h2>Materiales</h2>
             <div class="list">
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="wood"/>
                     Madera de 60x20x18mm o madera de ?x20x18mm para cortar
                 </label>
-            </div>
-            <div class="checkitem">
                 <label class="item">
                     <input type="checkbox" name="bracket"/>
                     2 ménsulas esquineras de 20x15x1,5in
-                </label>
-            </div>
-            <div class="checkitem">
+                </label>                
                 <label class="item">
                     <input type="checkbox" name="screws"/>
                     4 tornillos para madera de 2 cm
-                </label>
-            </div>
-            <div class="checkitem">
+                </label>                
                 <label class="item">
                     <input type="checkbox" name="ramplug"/>
                     4 tacos con respectivos tornillos
-                </label>
-            </div>
-            <div class="checkitem">
+                </label>        
                 <label class="item">
                     <input type="checkbox" name="sandpaper"/>
                     Lija de mano grano n°80
-                </label>
-            </div>
+                </label>                
             </div>
         </div>
     </div>
