Lot of things xd, forget to commit

--- a/es/index.html
+++ b/es/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,11 @@
     <title>Repisas 101</title>
 </head>
 <body>
-    <div class="header">
+    <section class="top">
         <h1>Repisas <strong>101</strong></h1>
-        <h3>Una guía simple e intuitiva para hacer tu propia repisa</h3>
-    </div>
-    <div class="what">
+        <h2>Una guía simple e intuitiva para hacer tu propia repisa</h2>
+    </section>
+    <section class="what">
         <h2>¿Qué es una repisa?</h2>
         <ol>
             <li>Placa, normalmente de madera, que se amura a la
@@ -21,8 +21,8 @@
             <li>Excelente forma de aprovechar espacio de las paredes.</li>
             <li>Algo que te hace más feliz (objetivamente)</li>    
         </ol>
-    </div>
-    <div class="cautions">
+    </section>
+    <section class="cautions">
         <h2>Prestar atención</h2>
         <p>Explicaré a continuación algunas cosas a tener en cuenta antes de
             comenzar a trabajar. <strong>Por favor, leer hasta el final</strong>.
@@ -74,59 +74,13 @@
                 <li>Azulejos, metal o cualquier material muy resistente</li>
             </ul>
         </div>
-    </div>
-    <div class ="need">
+    </section>
+    <section class ="need">
     <p class="title">Para una repisa de 60x20x18mm...</p>
     <h2 class="title">Necesitamos:</h2>
     <div class="checkboxes">
         <div class="needles">
-            <h2>Herramientas</h2>
-            <div class="list">
-                <label class="item">
-                    <input type="checkbox" name="pencil">
-                    Lápiz
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="meter"/>
-                    Cinta métrica
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="screwdriver"/>
-                    Destornillador phillips
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="drill"/>
-                    Taladro
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="level"/>
-                    Nivel de mano
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="hammer"/>
-                    Martillo
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="square"/>
-                    Escuadra de precisión
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="saw"/>
-                    Sierra circular o de mano (si es necesario cortar la madera)
-                </label>
-            <h4>Recomiendo:</h4>
-                <label class="item">
-                    <input type="checkbox" name="glasses"/>
-                    Gafas de protección
-                </label>
-                <label class="item">
-                    <input type="checkbox" name="auditive"/>
-                    Protector auditivo
-                </label>
-            </div>
-        </div>
-        <div class="needles">
-            <h2>Materiales</h2>
+            <h3>Materiales</h3>
             <div class="list">
                 <label class="item">
                     <input type="checkbox" name="wood"/>
@@ -150,59 +104,219 @@
                 </label>                
             </div>
         </div>
+        <div class="needles">
+            <h3>Herramientas</h3>
+            <div class="list">
+                <label class="item">
+                    <input type="checkbox" name="pencil">
+                    Lápiz
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="meter"/>
+                    Cinta métrica
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="screwdriver"/>
+                    Destornillador phillips
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="drill"/>
+                    Taladro
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="mechaWall"/>
+                    Mecha de 8mm para pared
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="mechaWood"/>
+                    Mecha de 4mm para madera
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="level"/>
+                    Nivel de mano
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="hammer"/>
+                    Martillo
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="square"/>
+                    Escuadra de precisión
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="saw"/>
+                    Sierra circular o de mano (si es necesario cortar la madera)
+                </label>
+            </div>
+        </div>
+        <div class="needles">
+            <h3>Protección</h3>
+            <div class="list">
+                <label class="item">
+                    <input type="checkbox" name="glasses"/>
+                    Gafas de protección                    
+                </label>
+                <label class="item">
+                    <input type="checkbox" name="auditive"/>
+                    Protector auditivo                    
+                </label>
+            </div>
+        </div>
     </div>
-    </div>
-    <div class="steps">
+    </section>
+    <section class="steps">
         <h2>Pasos a seguir</h2>
-        <div id="concrete">
+        <h3>Selecciona en que tipo de pared vas a construir</h3>
+        <div class="wallType">
+            <button id="concreteBtn" class="wallBtn">Ladrillo/Concreto</button>
+            <button id="drywallBtn" class="wallBtn">Drywall</button>
+        </div>
+        <div id="concreteSteps">    
         <div class="step">
-            <h3>Cortar madera</h3>
+            <h3>Preparar madera</h3>
+            <div class="substep">
+                <p>Con ayuda de la cinta métrica, hacemos una pequeña marca al
+                costado de la madera a la altura requerida (en este caso, 60cm).
+                Usamos la escuadra para hacer una línea del lado marcado hasta
+                el otro.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Cortar la madera donde marcamos previamente. <strong>Buscar
+                instrucciones</strong> de como cortar con la herramienta elegida
+                para evitar problemas.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Si cortamos la madera o pedimos que la corten, debemos lijarla. 
+                Debemos hacer frotes cortos para así evitar levantar astillas y
+                lastimarnos. La madera está lista cuando se sienta lisa al tacto.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
         </div>
         <div class="step">
             <h3>Atornillar ménsulas a la madera</h3>
+            <div class="substep">
+                <p>Ahora debemos marcar donde irán las ménsulas. <strong>La ménsula
+                debe estar a 2,5cm del lateral, recto respecto a la madera y la
+                pata que va a la pared debe quedar a la misma altura que el
+                borde de la madera.</strong> Cuando vemos que cumple los
+                criterios, marcamos la madera a través de los agujeros de la
+                ménsula
+                </p>
+                <img class="photo"src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Luego de colocar la mecha para madera, agujerear el centro de la
+                marca entre 0,5 y 1cm, para facilitar la entrada del tornillo.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Posicionar las ménsulas y atornillar hasta que este firme. <strong>No
+                pasarse, ya que podemos "falsear" el agujero</strong>, lo que no
+                permitirá que el tornillo quede firme.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
         </div>
         <div class="step">
             <h3>Primer agujero</h3>
+            <div class="substep">
+                <p>Posicionar la repisa en donde iría y marcar una de las esquinas
+                    más alejadas de la madera.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Habiendo colocado la mecha para pared en el taladro y seleccionado
+                el modo taladro del mismo, agujerear lentamente en línea
+                recta el lugar donde marcamos. Si es ladrillo hueco, agujerear
+                hasta que el taladro no oponga resistencia (cuidado, porque si
+                venimos haciendo mucha fuerza para ese momento, se nos puede ir 
+                el taladro y dañar la pared). Si no lo es, agujerear hasta
+                que el tarugo pueda entrar completamente.
+                </p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Colocar tarugo</p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Atornillar</p>
+                <img class="photo"src="../img/empty.jpg">
+            </div>
         </div>
         <div class="step">
             <h3>Segundo agujero</h3>
+            <div class="substep">
+                <p>Nivelar</p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Repetir proceso para agujerear</p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
         </div>
         <div class="step">
             <h3>Agujeros restantes</h3>
+            <div class="substep">
+                <p>Marcar agujeros inferiores</p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+            <div class="substep">
+                <p>Repetir proceso para agujerear</p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
+        </div>
+        <div class="step">
+            <h3>Testear</h3>
+            <div class="substep">
+                <p>Colocar objetos</p>
+                <img class="photo" src="../img/empty.jpg">
+            </div>
         </div>
         </div>
-    </div>
-    <div class="feedback">
+    </section>
+    <section class="feedback">
         <h2>¿Cómo fue tu experiencia?</h2>
         <h3>Podés compartirla acá abajo</h3>
         <div class="form">
-        <form action="">
-            <div id="textInput" class="formInput">
-                <label for="name">Nombre:</label>
-                <input id="GET-name" type="text" name="name"
-                placeholder="Roberto Casablanca, Anónimo123"/>
+        <form id="form" action="" onsubmit="">
+            <div id="nameDiv" class="formInput">
+                <label for="nameInput">Tu nombre:</label>
+                <input id="nameInput" type="text" maxlength="60"
+                placeholder="Roberto Casablanca, Anónimo123" required/>
             </div>
-            <div id="imgInput" class="formInput">
-                <label for="image">Foto de/con tu repisa en uso:</label>
-                <input class="uploadBtn" id="GET-img" type="file" accept="image/*"
-                name="image" alt="Subir" />
+            <div id="imgDiv" class="formInput">
+                <label for="imgInput">Foto de/con tu repisa en uso:</label>
+                <input id="imgInput" type="file" accept="image/*"
+                alt="Subir" required/>
             </div>
-            <div id="expInput" class="formInput">
-                <label for="exp">Cómo fue tu experiencia:</label>
-                <textarea id="GET-exp" type="text" name="exp"
-                placeholder="Fue una experiencia...F"></textarea>
+            <div id="expDiv" class="formInput">
+                <label for="expInput">Cómo fue tu experiencia:</label>
+                <textarea id="expInput" type="text"  maxlength="400" value="eso"
+                placeholder="Fue una experiencia..."></textarea>
+                <div id="charDiv">
+                    <p id="charCount">0/400</p>
+                </div>
             </div>
             <div class="submit">
                 <input class="submitBtn" type="submit" value="Guardar"/>
             </div>
         </form>
         </div>
-    </div>
-    <div class="footer">
+    </section>
+    <footer>
         <p>Made by emmariescurrena</p>
         <a href="https://github.com/emmariescurrena" target="_blank">
             <img src="../img/github.png" alt="github" >
         </a>
-    </div>
+    </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
