Fix some consuing div naming and redesigns for mobile from top to need

--- a/es/index.html
+++ b/es/index.html
@@ -23,10 +23,12 @@
         </ol>
     </section>
     <section class="cautions">
-        <h2>Prestar atención</h2>
-        <p>Explicaré a continuación algunas cosas a tener en cuenta antes de
+        <div class="cautionsTitle">
+            <h2>Prestar atención</h2>
+            <p>Explicaré a continuación algunas cosas a tener en cuenta antes de
             comenzar a trabajar. <strong>Por favor, leer hasta el final</strong>.
-        </p>
+            </p>
+        </div>
         <div class="caution">
             <h3>Terminología</h3>
             <p>Las medidas de la madera se leen <strong>"largo x ancho x alto"
@@ -40,7 +42,7 @@
             </p>
         </div>
         <div class="caution">
-            <h3>Repisa</h3>
+            <h3>Dimensiones de la repisa</h3>
             <p>El tamaño de la repisa y la cantidad de ménsulas dependerá del
             propósito de la repisa. Por ejemplo, una repisa de 80x20x18mm
             dedicada a un par de figuritas solo requerirá
@@ -76,8 +78,10 @@
         </div>
     </section>
     <section class ="need">
-    <p class="title">Para una repisa de 60x20x18mm...</p>
-    <h2 class="title">Necesitamos:</h2>
+    <div class="needTitle">
+        <p>Para una repisa de 60x20x18mm...</p>
+        <h2>Necesitamos:</h2>
+    </div>
     <div class="checkboxes">
         <div class="needles">
             <h3>Materiales</h3>
@@ -168,7 +172,7 @@
         <h2>Pasos a seguir</h2>
         <h3>Selecciona en que tipo de pared vas a construir</h3>
         <div class="wallType">
-            <button id="concreteBtn" class="wallBtn">Ladrillo/Concreto</button>
+            <button id="concreteBtn" class="wallBtn">Ladrillo</button>
             <button id="drywallBtn" class="wallBtn">Drywall</button>
         </div>
         <div id="concreteSteps">    
