Mobile design finished

--- a/es/index.html
+++ b/es/index.html
@@ -169,8 +169,10 @@
     </div>
     </section>
     <section class="steps">
-        <h2>Pasos a seguir</h2>
-        <h3>Selecciona en que tipo de pared vas a construir</h3>
+        <div class="stepsTitle">
+            <h2>Pasos a seguir</h2>
+            <h3>Selecciona en que tipo de pared vas a construir</h3>
+        </div>
         <div class="wallType">
             <button id="concreteBtn" class="wallBtn">Ladrillo</button>
             <button id="drywallBtn" class="wallBtn">Drywall</button>
@@ -287,8 +289,10 @@
         </div>
     </section>
     <section class="feedback">
-        <h2>¿Cómo fue tu experiencia?</h2>
-        <h3>Podés compartirla acá abajo</h3>
+        <div class="feedbackTitle">
+            <h2>¿Cómo fue tu experiencia?</h2>
+            <h3>Podés compartirla acá abajo</h3>
+        </div>
         <div class="form">
         <form id="form" action="" onsubmit="">
             <div id="nameDiv" class="formInput">
