Dark/light thme fully implemented

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="dark">
+<html lang="es" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,11 @@
 <body>
     <button
         type="button"
-        data-theme-toggle>Change to light theme</button>
+        id="button"
+        data-theme-toggle
+        aria-label="Change to light theme">
+        <img id="buttonImg" src="./img/day-and-night-icon-light.svg">
+    </button>
     <section class="top">
         <h1>Repisas <strong>101</strong></h1>
         <h2>Una guía simple e intuitiva para hacer tu propia repisa</h2>
