Fixed theme doesn't save preferences

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="light">
+<html lang="es" data-theme="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
     <button
         type="button"
         id="button"
-        data-theme-toggle
-        aria-label="Change to light theme">
-        <img id="buttonImg" src="./img/day-and-night-icon-light.svg">
+        data-theme-toggle=""
+        aria-label="">
+        <img id="buttonImg" src="">
     </button>
     <section class="top">
         <h1>Repisas <strong>101</strong></h1>
@@ -182,7 +182,8 @@
                 lastimarnos. La madera está lista cuando se sienta lisa al tacto.
                 </p>
                 <figure class="photos">
-                    <img class="photo" src="./img/empty.jpg">
+                    <img class="photo" src="./img/empty.jpg"
+                    alt="lijando-madera">
                 </figure>
             </div>
         </div>
@@ -198,8 +199,10 @@
                 </p>
                 <figure class="photos">
                     <div class="row">
-                        <img class="photoGroup" src="./img/posicionar-mensula.jpg">
-                        <img class="photoGroup" src="./img/posicionar-mensula-2.jpg">
+                        <img class="photoGroup" src="./img/posicionar-mensula.jpg"
+                        alt="lijando-madera">
+                        <img class="photoGroup" src="./img/posicionar-mensula-2.jpg"
+                        alt="lijando-madera">
                     </div>
                 </figure>
             </div>
